--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,40 @@
 body {
-  background-color: red;
+  font-size: 62.5%;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.start-page {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.title {
+  font-size: 5rem;
+}
+
+.start-btn {
+  border: 0.2rem solid black;
+  border-radius: 2rem;
+  width: 10rem;
+  height: 4rem;
+  font-size: 2.5rem;
+  margin: 1rem;
+}
+
+.btn:hover {
+  background-color: rgb(197, 197, 197);
+}
+
+.btn:focus {
+  border: 0.2rem solid blue;
+}
+
+.hide {
+  display: none;
 }
