--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
+@import "startpage";
+@import "gamepage";
+
 body {
   font-size: 62.5%;
   box-sizing: border-box;
@@ -6,25 +9,9 @@ body {
   padding: 0;
 }
 
-.start-page {
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.title {
-  font-size: 5rem;
-}
-
-.start-btn {
-  border: 0.2rem solid black;
-  border-radius: 2rem;
-  width: 10rem;
-  height: 4rem;
-  font-size: 2.5rem;
-  margin: 1rem;
+img {
+  max-width: 35%;
+  border: 1rem solid black;
 }
 
 .btn:hover {
