--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,11 @@ img {
   border: 1rem solid black;
 }
 
+.btn {
+  border: 0.2rem solid black;
+    border-radius: 2rem;
+}
+
 .btn:hover {
   background-color: rgb(197, 197, 197);
 }
